# AlphaFold3-AIGen-KnowledgeBase

./: .gitignore  .gitmodules  AGENTS.md  AUDIT.md  BRAIN.md  Home.md  NOTICE.md  Obsidian.md  README.md  Summary.md  markdownlint.jsonc  🏠 Головна.md
.brain/: .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml
.brain/brain/: cli.py
.brain/brain/commands/: __init__.py  health.py  mcp.py  pdf.py  research.py  vault.py
.brain/brain/common/: __init__.py  health.py  langchain_utils.py  retrieval.py  runtime.py
.brain/brain/mcp/: server.py
.brain/brain/pdf/: __init__.py  fetch.py  indexing.py  models.py  parsers.py  search.py
.brain/brain/pdf/backends/: __init__.py  grobid.py  marker.py  pdfplumber.py  pymupdf.py
.brain/brain/research/: memory.py  models.py  orchestration.py
.brain/brain/settings/: __init__.py  loader.py
.brain/brain/sources/pdf/backends/: grobid.py
.brain/brain/vault/: __init__.py  indexing.py  markdown.py  models.py  search.py
.brain/tests/: test_cli.py  test_config.py  test_flake8.py  test_index_health.py  test_linting.py  test_pdf_fetch.py  test_pdf_search.py  test_research.py  test_vault_indexing.py  test_vault_search.py
.obsidian/: app.json  appearance.json  community-plugins.json
.scripts/: compare_graph_retrieval.py  format_markdown_tables.py  generate_audit.py
EN/: 1.5.5. Literature and Priorities.md  2.0. Index.md  AGENTS.md  Index.md  Literature and Priorities.md  NOTICE.md  Summary.md
UA/: 1.5.5. Література та пріоритети.md  2.0. Індекс.md  AGENTS.md  NOTICE.md  README.md  Індекс.md  Головна.md  (+1 more)
(+152 files in other folders)
