[project]
name = "brain"
version = "0.1.0"
description = "Local BRAIN tooling for the AlphaFold3 vault"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.30.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2",
    "rich>=14.1.0",
    "sentence-transformers>=5.3.0",
    "typer>=0.24.1",
]

[project.scripts]
brain = "brain.cli:main"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=9.0.2",
]
